Added repo link

--- a/www/style.scss
+++ b/www/style.scss
@@ -6,6 +6,11 @@ body {
   height: 100%;
 }
 
+#repo-link {
+  text-align: left;
+  margin-top: 2vh;
+}
+
 #menu {
   position: sticky;
   top: 10px;
